--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boiler",
+  "name": "Hot Boiler",
   "version": "1.0.0",
   "description": "Webpack Hot Barebones Boilerplate",
   "main": "index.js",
