--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   "author": "Evan Corley <eccorley@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.4.0",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "webpack": "^1.12.11",
-    "webpack-dev-server": "^1.14.1"
+    "babel-core": "6.5.2",
+    "babel-loader": "6.2.3",
+    "babel-preset-es2015": "6.5.0",
+    "babel-preset-stage-0": "6.5.0",
+    "webpack": "1.12.13",
+    "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
-    "css-loader": "^0.23.1",
-    "node-sass": "^3.4.2",
-    "sass-loader": "^3.1.2",
-    "style-loader": "^0.13.0"
+    "css-loader": "0.23.1",
+    "node-sass": "3.4.2",
+    "sass-loader": "3.1.2",
+    "style-loader": "0.13.0"
   }
 }
